moved stenicl page to subfolder

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 # theme: jekyll-theme-slate
 theme: minima
 
-baseurl: "/stempel_data"
+# baseurl: "/stempel_data"
+
+include: ['_pages']
 
 defaults:
   - scope:
