--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,6 @@
 # theme: jekyll-theme-slate
 theme: minima
 
-# baseurl: "/stempel_data"
+#baseurl: "/stempel_data"
 
-include: ['_pages']
-
-defaults:
-  - scope:
-      path: "graphs"
-    values:
-      image: true
+include: ['stencils', 'machine_files']
