--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
-# theme: jekyll-theme-slate
-theme: minima
 
-#baseurl: "/stempel_data"
+title: stempel data collection
+description: collection of all benchmark data obtained by using the stempel tool chain
+
+show_downloads: true
+
+theme: jekyll-theme-dinky
 
 include: ['stencils', 'machine_files']
