testing better ecm plots

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: stempel data collection
 description: collection of all benchmark data obtained by using the stempel tool chain
 
-show_downloads: true
+show_downloads: false
 
 theme: jekyll-theme-dinky
 
