changed theme to 'leap day' with RRZE color scheme

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ description: collection of all benchmark data obtained by using the stempel tool
 
 show_downloads: false
 
-theme: jekyll-theme-dinky
+theme: jekyll-theme-leap-day
 
 include: ['stencils', 'machine_files']
