--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: stempel data collection
 description: collection of all benchmark data obtained by using the stempel tool chain
 
+baseurl: /stempel_data_collection
 show_downloads: false
 
 theme: jekyll-theme-leap-day
