Updated comment style and added comments for machine files

--- a/_data/machine_files/SkylakeSP_Gold-5122.yml.comment.yml
+++ b/_data/machine_files/SkylakeSP_Gold-5122.yml.comment.yml
@@ -1,4 +1,4 @@
 commithash: c5306650acce0c17a77fa015ed1b14bf28aa9a40
 comment: The correct way to measure and predict L2-Memory and L3-Memory traffic is unknown.
-author: JH
+author: JuHa
 review: orange
