--- a/stencils/3D/1r/heterogeneous/star/constant/double/BroadwellEP_E5-2697_CoD/stencil.c.comment.yml
+++ b/stencils/3D/1r/heterogeneous/star/constant/double/BroadwellEP_E5-2697_CoD/stencil.c.comment.yml
@@ -1,6 +1,2 @@
-# template file for comments for each plot, stencil or machine-file
-# filename has to be exactly the same as the according/commented file
-commithash: sakjfbsdla43qasd31 # commit hash of the corresponding file
-comment: stencil comment # null or comment. Markdown syntax is possible
-author: JuHo
-review: null # possible: green, orange, red, null (=gray)
+{author: Julian Hornich, comment: stencil is super cool, commithash: sakjfbsdla43qasd31,
+  review: orange}
