--- a/_data/comments.yml
+++ b/_data/comments.yml
@@ -1,11 +1,11 @@
 machine_files:
-  SkylakeSP_Gold-5122: {author: JuHa, comment: The correct way to measure and
+  SkylakeSP_Gold-5122.yml: {author: JuHa, comment: The correct way to measure and
       predict L2-Memory and L3-Memory traffic is unknown., commithash: c5306650acce0c17a77fa015ed1b14bf28aa9a40,
     latest_commithash: da7b87986f0335be3f5fc373db4a9007f2732ab8, review: orange, uptodate: false}
-  SkylakeSP_Gold-6148: {author: JuHa, comment: The correct way to measure and
+  SkylakeSP_Gold-6148.yml: {author: JuHa, comment: The correct way to measure and
       predict L2-Memory and L3-Memory traffic is unknown., commithash: c5306650acce0c17a77fa015ed1b14bf28aa9a40,
     latest_commithash: da7b87986f0335be3f5fc373db4a9007f2732ab8, review: orange, uptodate: false}
-  SkylakeSP_Gold-6148_avx512: {author: JuHa, comment: The correct way to measure
+  SkylakeSP_Gold-6148_avx512.yml: {author: JuHa, comment: The correct way to measure
       and predict L2-Memory and L3-Memory traffic is unknown., commithash: 10f6626158e4b19eafc53878d8f3d70785702421,
     latest_commithash: da7b87986f0335be3f5fc373db4a9007f2732ab8, review: orange, uptodate: false}
 stencils:
@@ -13,15 +13,10 @@ stencils:
     1r:
       heterogeneous:
         star:
-          constant:
+          variable:
             double:
-              BroadwellEP_E5-2697_CoD:
-                ecm_CS.svg: {author: rrzeschorscherl, comment: ecm CS comment, commithash: sakjfbsdla43qasd31,
-                  latest_commithash: 41f77e03049276434cf3af559206cfcfb73fd599, review: null,
+              SkylakeSP_Gold-6148:
+                stencil.c: {author: Julian Hornich, comment: supidupi, commithash: null,
+                  latest_commithash: e9de4034701ac5653c7751778e0ef18a680f5871, review: red,
                   uptodate: false}
-                ecm_LC.svg: {author: rrzeschorscherl, comment: ecm LC comment, commithash: sakjfbsdla43qasd31,
-                  latest_commithash: 41f77e03049276434cf3af559206cfcfb73fd599, review: null,
-                  uptodate: false}
-                stencil.c: {author: rrzeschorscherl, comment: stencil comment, commithash: sakjfbsdla43qasd31,
-                  latest_commithash: e9de4034701ac5653c7751778e0ef18a680f5871, review: null,
-                  uptodate: false}
+
