fixed pyyaml install command

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: ruby
 rvm: 2.5
 install:
   - gem install jekyll jekyll-theme-leap-day
-  - pip install yaml
+  - pip3 install pyyaml
 script: "./scripts/cibuild"
 deploy:
   provider: pages
