installing python3-pip

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 dist: xenial
 language: ruby
 rvm: 2.5
+before_install:
+    - sudo apt-get install python3-pip
 install:
   - gem install jekyll jekyll-theme-leap-day
   - pip3 install pyyaml
@@ -14,5 +16,4 @@ deploy:
   keep-history: false
   on:
     branch: master
-sudo: false
 cache: bundler
