installing python3-setuptools

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: xenial
 language: ruby
 rvm: 2.5
 before_install:
-    - sudo apt-get install python3-pip
+    - sudo apt-get install python3-pip python3-setuptools
 install:
   - gem install jekyll jekyll-theme-leap-day
   - pip3 install pyyaml
