--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: ruby
 before_install:
 - sudo apt-get install python3-pip python3-setuptools
 install:
-- gem install jekyll jekyll-theme-leap-day
+- bundle install jekyll jekyll-theme-leap-day
 - pip3 install pyyaml
 script: "./scripts/cibuild"
 deploy:
