fix home button width and other small changes

--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,6 @@ show_downloads: false
 
 theme: jekyll-theme-leap-day
 
-include: ['stencils', 'machine_files']
+encoding: utf-8
+
+include: ['stencils']
