updated Skylake comments

--- a/_data/machine_files/SkylakeSP_Gold-6148_avx512.yml.comment.yml
+++ b/_data/machine_files/SkylakeSP_Gold-6148_avx512.yml.comment.yml
@@ -1,4 +1,3 @@
-commithash: 10f6626158e4b19eafc53878d8f3d70785702421
-comment: The correct way to measure and predict L2-Memory and L3-Memory traffic is unknown.
-author: JuHa
-review: orange
+{author: Julian Hammer, comment: The correct way to measure and predict L2-Memory
+    and L3-Memory traffic is unknown., commithash: da7b87986f0335be3f5fc373db4a9007f2732ab8,
+  review: orange}
