--- a/_data/machine_files/SkylakeSP_Gold-5122.yml.comment.yml
+++ b/_data/machine_files/SkylakeSP_Gold-5122.yml.comment.yml
@@ -1,4 +1,3 @@
-commithash: c5306650acce0c17a77fa015ed1b14bf28aa9a40
-comment: The correct way to measure and predict L2-Memory and L3-Memory traffic is unknown.
-author: JuHa
-review: orange
+{author: Julian Hammer, comment: The correct way to measure and predict L2-Memory
+    and L3-Memory traffic is unknown., commithash: da7b87986f0335be3f5fc373db4a9007f2732ab8,
+  review: orange}
