Project renamed to INSPECT

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 
-title: stempel data collection
-description: collection of all benchmark data obtained by using the stempel tool chain
+title: INSPECT
+description: Intra Node Stencil Performance Evaluation Collection
 
-baseurl: /stempel_data_collection
+baseurl: /INSPECT
 show_downloads: false
 
 theme: jekyll-theme-leap-day
