--- a/_data/machine_files/BroadwellEP_E5-2630.yml
+++ b/_data/machine_files/BroadwellEP_E5-2630.yml
@@ -6,12 +6,12 @@ FLOPs per cycle:
   SP: {ADD: 8, FMA: 16, MUL: 8, total: 32}
 NUMA domains per socket: 1
 cacheline size: 64 B
-clock: 2.3 GHz
+clock: 2.2 GHz
 compiler:
   !!omap
-  icc: -O3 -xCORE-AVX2 -fno-alias
-  gcc: -Ofast -march=core-avx2 -fargument-noalias -ffast-math -D_POSIX_C_SOURCE=200112L
-  clang: -03 -mavx2 -D_POSIX_C_SOURCE=200112L
+  - icc: -O3 -xCORE-AVX2 -fno-alias
+  - gcc: -Ofast -march=core-avx2 -fargument-noalias -ffast-math -D_POSIX_C_SOURCE=200112L
+  - clang: -03 -mavx2 -D_POSIX_C_SOURCE=200112L
 cores per NUMA domain: 10
 cores per socket: 10
 kerncraft version: 0.8.0
