--- a/scripts/template_comment.yml
+++ b/scripts/template_comment.yml
@@ -1,6 +1,32 @@
-# template file for comments for each plot, stencil or machine-file
-# filename has to be exactly the same as the according/commented file
-commithash: null # commit hash of the corresponding file
-comment: null # null or comment. Markdown syntax is possible
-author: null # author name (will be visible to user)
-review: null # possible: green, orange, red, null (=gray)
+general:
+  author: null # author name (will be visible to user)
+  review: null # possible: green, orange, red, null (=gray)
+  comment: null # null or comment. Markdown syntax is possible
+stencil:
+  author: null # author name (will be visible to user)
+  review: null # possible: green, orange, red, null (=gray)
+  comment: null # null or comment. Markdown syntax is possible
+iaca:
+  author: null # author name (will be visible to user)
+  review: null # possible: green, orange, red, null (=gray)
+  comment: null # null or comment. Markdown syntax is possible
+system_info:
+  author: null # author name (will be visible to user)
+  review: null # possible: green, orange, red, null (=gray)
+  comment: null # null or comment. Markdown syntax is possible
+grid_scaling:
+  author: null # author name (will be visible to user)
+  review: null # possible: green, orange, red, null (=gray)
+  comment: null # null or comment. Markdown syntax is possible
+data_transfers:
+  author: null # author name (will be visible to user)
+  review: null # possible: green, orange, red, null (=gray)
+  comment: null # null or comment. Markdown syntax is possible
+thread_scaling:
+  author: null # author name (will be visible to user)
+  review: null # possible: green, orange, red, null (=gray)
+  comment: null # null or comment. Markdown syntax is possible
+spatial_blocking:
+  author: null # author name (will be visible to user)
+  review: null # possible: green, orange, red, null (=gray)
+  comment: null # null or comment. Markdown syntax is possible
