--- a/_data/machine_files/SkylakeSP_Gold-6148_avx512.yml
+++ b/_data/machine_files/SkylakeSP_Gold-6148_avx512.yml
@@ -26,9 +26,10 @@ FLOPs per cycle:
     MUL: 16
 micro-architecture: SKX
 compiler:
-  icc: -O3 -fno-alias -xCORE-AVX512  -qopt-zmm-usage=high
-  clang: -O3 -march=skylake-avx512 -D_POSIX_C_SOURCE=200112L
-  gcc: -O3 -march=skylake-avx512
+  !!omap
+  - icc: -O3 -fno-alias -xCORE-AVX512  -qopt-zmm-usage=high
+  - clang: -O3 -march=skylake-avx512 -D_POSIX_C_SOURCE=200112L
+  - gcc: -O3 -march=skylake-avx512
 cacheline size: 64 B
 overlapping model:
   ports: ["0", "0DV", "1", "2", "3", "4", "5", "6", "7"]
