--- a/_data/machine_files/SandyBridgeEP_E5-2680.yml
+++ b/_data/machine_files/SandyBridgeEP_E5-2680.yml
@@ -1,4 +1,4 @@
-kerncraft version: 0.7.1
+kerncraft version: 0.8.1dev0
 clock: 2.7 GHz
 cores per socket: 8
 cores per NUMA domain: 8
@@ -11,8 +11,8 @@ cacheline size: 64 B
 compiler:
     !!omap
     - icc: -O3 -xAVX -fno-alias -qopenmp
-    - clang: -O3 -march=corei7-avx -mtune=corei7-avx -D_POSIX_C_SOURCE=200112L -fopenmp
-    - gcc: -O3 -march=corei7-avx -D_POSIX_C_SOURCE=200112L -fopenmp
+    - clang: -O3 -march=corei7-avx -mtune=corei7-avx -D_POSIX_C_SOURCE=200809L -fopenmp
+    - gcc: -O3 -march=corei7-avx -D_POSIX_C_SOURCE=200809L -fopenmp -lm
 micro-architecture: SNB
 FLOPs per cycle:
     SP: {total: 16, ADD: 8, MUL: 8}
@@ -42,6 +42,8 @@ memory hierarchy:
           accesses: MEM_UOPS_RETIRED_LOADS:PMC[0-3]
           misses: L1D_REPLACEMENT:PMC[0-3]
           evicts: L1D_M_EVICT:PMC[0-3]
+      upstream throughput: ['architecture code analyzer', ['2D', '3D']]
+      transfers overlap: False
     - level: L2
       cache per group: {
          'sets': 512, 'ways': 8, 'cl_size': 64, # 256 kB
@@ -51,7 +53,8 @@ memory hierarchy:
       cores per group: 1
       threads per group: 2
       groups: 16
-      non-overlap upstream throughput: [32 B/cy, 'half-duplex']
+      upstream throughput: [32 B/cy, 'half-duplex']
+      transfers overlap: False
       performance counter metrics:
           accesses: L1D_REPLACEMENT:PMC[0-3]
           misses: L2_LINES_IN_ALL:PMC[0-3]
@@ -64,7 +67,8 @@ memory hierarchy:
       cores per group: 8
       threads per group: 16
       groups: 2
-      non-overlap upstream throughput: [32 B/cy, 'half-duplex']
+      upstream throughput: [32 B/cy, 'half-duplex']
+      transfers overlap: False
       performance counter metrics:
           accesses: L2_LINES_IN_ALL:PMC[0-3]
           misses: (CAS_COUNT_RD:MBOX0C[01] + CAS_COUNT_RD:MBOX1C[01] +
@@ -73,7 +77,8 @@ memory hierarchy:
                    CAS_COUNT_WR:MBOX2C[01] + CAS_COUNT_WR:MBOX3C[01])
     - level: MEM
       cores per group: 8
-      non-overlap upstream throughput: ['full socket memory bandwidth', 'half-duplex']
+      upstream throughput: ['full socket memory bandwidth', 'half-duplex']
+      transfers overlap: False
       size per group: null
       threads per group: 16
 benchmarks:
