--- a/_data/machine_files/SkylakeSP_Gold-5122.yml
+++ b/_data/machine_files/SkylakeSP_Gold-5122.yml
@@ -3,7 +3,7 @@
 # FIXME bandwidth measurements need validation
 # FIXME
 
-kerncraft version: 0.7.1
+kerncraft version: 0.8.1dev0
 model name: Intel(R) Xeon(R) Gold 5122 CPU @ 3.60GHz
 model type: Intel Core Skylake SP
 sockets: 2
@@ -27,8 +27,8 @@ micro-architecture: SKX
 compiler:
   !!omap
   - icc: -O3 -fno-alias -xCORE-AVX512 -qopenmp
-  - clang: -O3 -march=skylake-avx512 -D_POSIX_C_SOURCE=200112L -fopenmp
-  - gcc: -O3 -march=skylake-avx512 -fopenmp
+  - clang: -O3 -march=skylake-avx512 -D_POSIX_C_SOURCE=200809L -fopenmp
+  - gcc: -O3 -march=skylake-avx512 -D_POSIX_C_SOURCE=200809L -fopenmp -lm
 cacheline size: 64 B
 overlapping model:
   ports: ["0", "0DV", "1", "2", "3", "4", "5", "6", "7"]
@@ -61,8 +61,11 @@ memory hierarchy:
   groups: 8
   cores per group: 1
   threads per group: 2
+  upstream throughput: ['architecture code analyzer', ['2D', '3D']]
+  transfers overlap: False
 - level: L2
-  non-overlap upstream throughput: [64 B/cy, 'half-duplex']
+  upstream throughput: [64 B/cy, 'half-duplex']
+  transfers overlap: False
   performance counter metrics:
     accesses: L1D_REPLACEMENT:PMC[0-3]
     misses: L2_LINES_IN_ALL:PMC[0-3]
@@ -82,7 +85,8 @@ memory hierarchy:
   cores per group: 1
   threads per group: 2
 - level: L3
-  non-overlap upstream throughput: [16 B/cy, 'full-duplex']
+  upstream throughput: [16 B/cy, 'full-duplex']
+  transfers overlap: False
   performance counter metrics:
     accesses: (L2_LINES_IN_ALL:PMC[0-3] -
                (CAS_COUNT_RD:MBOX0C[01]  + CAS_COUNT_RD:MBOX1C[01] +
@@ -96,10 +100,8 @@ memory hierarchy:
              CAS_COUNT_WR:MBOX2C[01] + CAS_COUNT_WR:MBOX3C[01] +
              CAS_COUNT_WR:MBOX4C[01] + CAS_COUNT_WR:MBOX5C[01])
   cache per group:
-    sets: 16896
-    # TODO is actuall something else, but necessary to get to 16.5 MB
-    ways: 16
-    # TODO is actually 11, but pycachesim only supports powers of two
+    sets: 24576
+    ways: 11
     cl_size: 64
     replacement_policy: 'LRU'
     write_allocate: False
@@ -111,7 +113,8 @@ memory hierarchy:
 - level: MEM
   cores per group: 4
   threads per group: 8
-  non-overlap upstream throughput: ['full socket memory bandwidth', 'half-duplex']
+  upstream throughput: ['full socket memory bandwidth', 'half-duplex']
+  transfers overlap: False
   penalty cycles per read stream: 0
   size per group:
 benchmarks:
