--- a/_data/machine_files/SkylakeSP_Gold-6148_SNC.yml
+++ b/_data/machine_files/SkylakeSP_Gold-6148_SNC.yml
@@ -3,7 +3,7 @@
 # FIXME performance counters might be wrong. This will only affect the Benchmark model
 # FIXME bandwidth measurements need validataion
 # FIXME
-kerncraft version: 0.7.3  # which version of kerncraft was this file created for
+kerncraft version: 0.8.1dev0  # which version of kerncraft was this file created for
 
 model name: Intel(R) Xeon(R) Gold 6148 CPU @ 2.40GHz
 model type: Intel Skylake SP processor
@@ -28,8 +28,8 @@ micro-architecture: SKX
 compiler:
   !!omap
   - icc: -O3 -fno-alias -xCORE-AVX512 -qopenmp
-  - clang: -O3 -march=skylake-avx512 -D_POSIX_C_SOURCE=200112L -fopenmp
-  - gcc: -O3 -march=skylake-avx512 -fopenmp
+  - clang: -O3 -march=skylake-avx512 -D_POSIX_C_SOURCE=200809L -fopenmp
+  - gcc: -O3 -march=skylake-avx512 -D_POSIX_C_SOURCE=200809L -fopenmp -lm
 cacheline size: 64 B
 overlapping model:
   ports: ["0", "0DV", "1", "2", "3", "4", "5", "6", "7"]
@@ -64,8 +64,11 @@ memory hierarchy:
   groups: 20
   cores per group: 1
   threads per group: 2
+  upstream throughput: ['architecture code analyzer', ['2D', '3D']]
+  transfers overlap: False
 - level: L2
-  non-overlap upstream throughput: [64 B/cy, 'half-duplex']
+  upstream throughput: [64 B/cy, 'half-duplex']
+  transfers overlap: False
   performance counter metrics:
     accesses: L1D_REPLACEMENT:PMC[0-3]
     misses: L2_LINES_IN_ALL:PMC[0-3]
@@ -85,7 +88,8 @@ memory hierarchy:
   cores per group: 1
   threads per group: 2
 - level: L3
-  non-overlap upstream throughput: [16 B/cy, 'full-duplex']
+  upstream throughput: [16 B/cy, 'full-duplex']
+  transfers overlap: False
   performance counter metrics:
     accesses: L2_LINES_IN_ALL:PMC[0-3]
     # FIXME not all misses in L2 lead to loads from L3, only the hits do
@@ -96,10 +100,8 @@ memory hierarchy:
              CAS_COUNT_WR:MBOX2C[01] + CAS_COUNT_WR:MBOX3C[01] +
              CAS_COUNT_WR:MBOX4C[01] + CAS_COUNT_WR:MBOX5C[01])
   cache per group:
-    sets: 28672
-    # TODO is actuall something else, but necessary to get to 16.5 MB
-    ways: 16
-    # TODO is actually 11, but pycachesim only supports powers of two
+    sets: 12288
+    ways: 11
     cl_size: 64
     replacement_policy: 'LRU'
     write_allocate: False
@@ -109,7 +111,8 @@ memory hierarchy:
   cores per group: 10
   threads per group: 20
 - level: MEM
-  non-overlap upstream throughput: ['full socket memory bandwidth', 'half-duplex']
+  upstream throughput: ['full socket memory bandwidth', 'half-duplex']
+  transfers overlap: False
   cores per group: 40
   threads per group: 80
   penalty cycles per read stream: 0
