comment on Zen_EPYC-7451

--- a/_data/machine_files/comments.yml
+++ b/_data/machine_files/comments.yml
@@ -22,3 +22,6 @@ SkylakeSP_Gold-6148_SNC:
   author: Julian Hammer
   comment: The correct way to measure and predict L2-Memory and L3-Memory traffic is unknown.
   review: orange
+Zen_EPYC-7451:
+  author: Julian Hammer
+  comment: Preliminary support for the AMD Zen microarchitecture is available in the kerncraft `feature/osaca` branch, which will be merged into master in near future.
