--- a/stencils/3D/r1/homogeneous/star/constant/double/IvyBridgeEP_E5-2660v2/comments.yml
+++ b/stencils/3D/r1/homogeneous/star/constant/double/IvyBridgeEP_E5-2660v2/comments.yml
@@ -1,4 +1,32 @@
 general:
-  {author: Julian Hammer, comment: null, review: red}
+  author: Julian Hammer
+  review: orange
+  comment: Sandy Bridge and Ivy Bridge have problems with splitloads and small stencils containing a central point. This issue was raised to Intel, but no solution was offered. As of Haswell, the problem is resolved. Including `#pragma vector aligned` reduced the problem, but does not solve it completly. Removing the central point solves this issue.
+stencil:
+  author: null # author name (will be visible to user)
+  review: null # possible: green, orange, red, null (=gray)
+  comment: null # null or comment. Markdown syntax is possible
+iaca:
+  author: null # author name (will be visible to user)
+  review: null # possible: green, orange, red, null (=gray)
+  comment: null # null or comment. Markdown syntax is possible
+system_info:
+  author: null # author name (will be visible to user)
+  review: null # possible: green, orange, red, null (=gray)
+  comment: null # null or comment. Markdown syntax is possible
+grid_scaling:
+  author: null # author name (will be visible to user)
+  review: null # possible: green, orange, red, null (=gray)
+  comment: null # null or comment. Markdown syntax is possible
 data_transfers:
-  {author: Julian Hammer, comment: null, review: green}
+  author: null # author name (will be visible to user)
+  review: null # possible: green, orange, red, null (=gray)
+  comment: null # null or comment. Markdown syntax is possible
+thread_scaling:
+  author: null # author name (will be visible to user)
+  review: null # possible: green, orange, red, null (=gray)
+  comment: null # null or comment. Markdown syntax is possible
+spatial_blocking:
+  author: null # author name (will be visible to user)
+  review: null # possible: green, orange, red, null (=gray)
+  comment: null # null or comment. Markdown syntax is possible
