generic jobs, likwid-bench kernel support (untested), beginning of "process"

--- a/config/kernels.yml
+++ b/config/kernels.yml
@@ -804,3 +804,9 @@
   parameter: 3D/r3/box/variable/point-symmetric/float _Complex
 - type: stempel
   parameter: 3D/r3/box/variable/point-symmetric/double _Complex
+
+- type: likwid-bench
+  parameter: daxpy
+  scaling:
+    first: 100
+    last: 67108864
