--- a/config/kernels.yml
+++ b/config/kernels.yml
@@ -36,6 +36,9 @@
     multiple_of: 16
 - type: named
   parameter: 3d-long-range-stencil.c
+  scaling:
+    first: 48
+    last: 896 # ~16 GB (3 arrays x 896^3 x 8 byte)
 - type: stempel
   parameter: 2D/r1/star/constant/isotropic/float
 - type: stempel
