--- a/config/hosts.yml
+++ b/config/hosts.yml
@@ -1,88 +1,97 @@
 phinally:
     nodelist: [phinally]
     submission_host: testcluster 
-    slurm_arguments: -C hwperf --export=None --time=24:00:00 
+    slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
-        - module load likwid/5.0-dev intel64/19.0up05 python/3.6-anaconda
-        - source activate my
+        - source /etc/profile
+        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0
+        - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.7 -g performance
     machine_filename: SandyBridgeEP_E5-2680.yml 
 
 ivyep1:
     nodelist: [ivyep1]
     submission_host: testcluster 
-    slurm_arguments: -C hwperf --export=None --time=24:00:00 
+    slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
-        - module load likwid/5.0-dev intel64/19.0up05 python/3.6-anaconda
-        - source activate my
+        - source /etc/profile
+        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0
+        - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 3.0 -g performance
     machine_filename: IvyBridgeEP_E5-2690v2.yml 
 
 hasep1:
     nodelist: [hasep1]
     submission_host: testcluster 
-    slurm_arguments: -C hwperf --export=None --time=24:00:00 
+    slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup: 
-        - module load likwid/5.0-dev intel64/19.0up05 python/3.6-anaconda
-        - source activate my
+        - source /etc/profile
+        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0
+        - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.3 -g performance --umin 2.3 --umax 2.3
     machine_filename: HaswellEP_E5-2695v3_CoD.yml 
 
 broadep2:
     nodelist: [broadep2]
     submission_host: testcluster 
-    slurm_arguments: -C hwperf --export=None --time=24:00:00 
+    slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
-        - module load likwid/5.0-dev intel64/19.0up05 python/3.6-anaconda
-        - source activate my
+        - source /etc/profile
+        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0
+        - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.3 -g performance --umin 2.3 --umax 2.3
     machine_filename: BroadwellEP_E5-2697v4_CoD.yml 
 
 skylakesp2:
     nodelist: [skylakesp2]
     submission_host: testcluster 
-    slurm_arguments: -C hwperf --export=None --time=24:00:00 
+    slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
-        - module load likwid/5.0-dev intel64/19.0up05 python/3.6-anaconda
-        - source activate my
+        - source /etc/profile
+        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 clang/8.0.0
+        - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.4 -g performance --umin 2.4 --umax 2.4
     machine_filename: SkylakeSP_Gold-6148_SNC.yml 
 
 casclakesp2:
     nodelist: [casclakesp2]
     submission_host: testcluster 
-    slurm_arguments: -C hwperf --export=None --time=24:00:00 
+    slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
-        - module load likwid/5.0-dev intel64/19.0up05 python/3.6-anaconda
-        - source activate my
+        - source /etc/profile
+        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0
+        - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.5 -g performance --umin 2.5 --umax 2.5
     machine_filename: CascadelakeSP_Gold-6248_SNC.yml 
 
 naples1:
     nodelist: [naples1]
     submission_host: testcluster 
-    slurm_arguments: -C hwperf --export=None --time=24:00:00 
+    slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
-        - module load likwid/5.0-dev intel64/19.0up05 python/3.6-anaconda
-        - source activate my
+        - source /etc/profile
+        - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0
+        - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.3 -g performance
     machine_filename: Zen_EPYC-7451.yml 
 
 # rome1:
 #     nodelist: [rome1]
 #     submission_host: testcluster 
-#     slurm_arguments: -C hwperf --export=None --time=24:00:00 
+#     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
 #     runtime_setup:
-#         - module load likwid/5.0-dev intel64/19.0up05 python/3.6-anaconda
-#         - source activate my
+#         - source /etc/profile
+#         - module load likwid/5.0-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0
+#         - source ~/py37/bin/activate
 #         - likwid-setFrequencies -t 0 -f 2.3 -g performance
 #     machine_filename: ~  # TODO
 
 warmup:
     nodelist: [warmup]
     submission_host: testcluster 
-    slurm_arguments: -C hwperf --export=None --time=24:00:00 
+    slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup: 
-        - module load likwid/5.0-dev intel64/19.0up05 python/3.6-anaconda
-        - source activate my
+        - source ~/.bashrc
+        - module load likwid/5.0-dev ThunderX2CN99/Ubuntu/16.04/arm-hpc-compiler-19.2/armpl/19.2.0
+        - source ~/py37-warmup/bin/activate
     machine_filename: ARMv8_ThunderX2-CN9980.yml 
