major report template updates, reduced stencil count. updated hosts list.

--- a/config/hosts.yml
+++ b/config/hosts.yml
@@ -95,3 +95,4 @@ warmup:
         - module load likwid/5.0-dev ThunderX2CN99/Ubuntu/16.04/arm-hpc-compiler-19.2/armpl/19.2.0
         - source ~/py37-warmup/bin/activate
     machine_filename: ARMv8_ThunderX2-CN9980.yml 
+    ignore_kerncraft_warnings: true
