--- a/config/kernels.yml
+++ b/config/kernels.yml
@@ -53,8 +53,16 @@
     last: 32800  # ~16GB
 - type: stempel
   parameter: 2D/r1/star/constant/isotropic/float _Complex
+  scaling:
+    steps: 25
+    first: 96
+    last: 32800  # ~16GB
 - type: stempel
   parameter: 2D/r1/star/constant/isotropic/double _Complex
+  scaling:
+    steps: 25
+    first: 96
+    last: 16400
 - type: stempel
   parameter: 2D/r1/star/constant/heterogeneous/float
   scaling:
@@ -69,8 +77,16 @@
     last: 32800  # ~16GB
 - type: stempel
   parameter: 2D/r1/star/constant/heterogeneous/float _Complex
+  scaling:
+    steps: 25
+    first: 96
+    last: 32800  # ~16GB
 - type: stempel
   parameter: 2D/r1/star/constant/heterogeneous/double _Complex
+  scaling:
+    steps: 25
+    first: 96
+    last: 16400
 - type: stempel
   parameter: 2D/r1/star/constant/homogeneous/float
   scaling:
@@ -89,10 +105,6 @@
   parameter: 2D/r1/star/constant/homogeneous/double _Complex
 - type: stempel
   parameter: 2D/r1/star/constant/point-symmetric/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r1/star/constant/point-symmetric/double
   scaling:
@@ -137,10 +149,6 @@
   parameter: 2D/r1/star/variable/point-symmetric/double _Complex
 - type: stempel
   parameter: 2D/r1/box/constant/isotropic/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r1/box/constant/isotropic/double
   scaling:
@@ -153,10 +161,6 @@
   parameter: 2D/r1/box/constant/isotropic/double _Complex
 - type: stempel
   parameter: 2D/r1/box/constant/heterogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r1/box/constant/heterogeneous/double
   scaling:
@@ -169,10 +173,6 @@
   parameter: 2D/r1/box/constant/heterogeneous/double _Complex
 - type: stempel
   parameter: 2D/r1/box/constant/homogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r1/box/constant/homogeneous/double
   scaling:
@@ -185,10 +185,6 @@
   parameter: 2D/r1/box/constant/homogeneous/double _Complex
 - type: stempel
   parameter: 2D/r1/box/constant/point-symmetric/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r1/box/constant/point-symmetric/double
   scaling:
@@ -233,10 +229,6 @@
   parameter: 2D/r1/box/variable/point-symmetric/double _Complex
 - type: stempel
   parameter: 2D/r2/star/constant/isotropic/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r2/star/constant/isotropic/double
   scaling:
@@ -249,10 +241,6 @@
   parameter: 2D/r2/star/constant/isotropic/double _Complex
 - type: stempel
   parameter: 2D/r2/star/constant/heterogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r2/star/constant/heterogeneous/double
   scaling:
@@ -265,10 +253,6 @@
   parameter: 2D/r2/star/constant/heterogeneous/double _Complex
 - type: stempel
   parameter: 2D/r2/star/constant/homogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r2/star/constant/homogeneous/double
   scaling:
@@ -281,10 +265,6 @@
   parameter: 2D/r2/star/constant/homogeneous/double _Complex
 - type: stempel
   parameter: 2D/r2/star/constant/point-symmetric/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r2/star/constant/point-symmetric/double
   scaling:
@@ -329,10 +309,6 @@
   parameter: 2D/r2/star/variable/point-symmetric/double _Complex
 - type: stempel
   parameter: 2D/r2/box/constant/isotropic/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r2/box/constant/isotropic/double
   scaling:
@@ -345,10 +321,6 @@
   parameter: 2D/r2/box/constant/isotropic/double _Complex
 - type: stempel
   parameter: 2D/r2/box/constant/heterogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r2/box/constant/heterogeneous/double
   scaling:
@@ -361,10 +333,6 @@
   parameter: 2D/r2/box/constant/heterogeneous/double _Complex
 - type: stempel
   parameter: 2D/r2/box/constant/homogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r2/box/constant/homogeneous/double
   scaling:
@@ -377,10 +345,6 @@
   parameter: 2D/r2/box/constant/homogeneous/double _Complex
 - type: stempel
   parameter: 2D/r2/box/constant/point-symmetric/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r2/box/constant/point-symmetric/double
   scaling:
@@ -425,10 +389,6 @@
   parameter: 2D/r2/box/variable/point-symmetric/double _Complex
 - type: stempel
   parameter: 2D/r3/star/constant/isotropic/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r3/star/constant/isotropic/double
   scaling:
@@ -441,10 +401,6 @@
   parameter: 2D/r3/star/constant/isotropic/double _Complex
 - type: stempel
   parameter: 2D/r3/star/constant/heterogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r3/star/constant/heterogeneous/double
   scaling:
@@ -457,10 +413,6 @@
   parameter: 2D/r3/star/constant/heterogeneous/double _Complex
 - type: stempel
   parameter: 2D/r3/star/constant/homogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r3/star/constant/homogeneous/double
   scaling:
@@ -473,10 +425,6 @@
   parameter: 2D/r3/star/constant/homogeneous/double _Complex
 - type: stempel
   parameter: 2D/r3/star/constant/point-symmetric/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r3/star/constant/point-symmetric/double
   scaling:
@@ -521,10 +469,6 @@
   parameter: 2D/r3/star/variable/point-symmetric/double _Complex
 - type: stempel
   parameter: 2D/r3/box/constant/isotropic/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r3/box/constant/isotropic/double
   scaling:
@@ -537,10 +481,6 @@
   parameter: 2D/r3/box/constant/isotropic/double _Complex
 - type: stempel
   parameter: 2D/r3/box/constant/heterogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r3/box/constant/heterogeneous/double
   scaling:
@@ -553,10 +493,6 @@
   parameter: 2D/r3/box/constant/heterogeneous/double _Complex
 - type: stempel
   parameter: 2D/r3/box/constant/homogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r3/box/constant/homogeneous/double
   scaling:
@@ -569,10 +505,6 @@
   parameter: 2D/r3/box/constant/homogeneous/double _Complex
 - type: stempel
   parameter: 2D/r3/box/constant/point-symmetric/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 46384  # ~16GB
 - type: stempel
   parameter: 2D/r3/box/constant/point-symmetric/double
   scaling:
@@ -617,10 +549,6 @@
   parameter: 2D/r3/box/variable/point-symmetric/double _Complex
 - type: stempel
   parameter: 3D/r1/star/constant/isotropic/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r1/star/constant/isotropic/double
   scaling:
@@ -633,10 +561,6 @@
   parameter: 3D/r1/star/constant/isotropic/double _Complex
 - type: stempel
   parameter: 3D/r1/star/constant/heterogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r1/star/constant/heterogeneous/double
   scaling:
@@ -649,10 +573,6 @@
   parameter: 3D/r1/star/constant/heterogeneous/double _Complex
 - type: stempel
   parameter: 3D/r1/star/constant/homogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r1/star/constant/homogeneous/double
   scaling:
@@ -665,10 +585,6 @@
   parameter: 3D/r1/star/constant/homogeneous/double _Complex
 - type: stempel
   parameter: 3D/r1/star/constant/point-symmetric/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r1/star/constant/point-symmetric/double
   scaling:
@@ -713,10 +629,6 @@
   parameter: 3D/r1/star/variable/point-symmetric/double _Complex
 - type: stempel
   parameter: 3D/r1/box/constant/isotropic/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r1/box/constant/isotropic/double
   scaling:
@@ -729,10 +641,6 @@
   parameter: 3D/r1/box/constant/isotropic/double _Complex
 - type: stempel
   parameter: 3D/r1/box/constant/heterogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r1/box/constant/heterogeneous/double
   scaling:
@@ -745,10 +653,6 @@
   parameter: 3D/r1/box/constant/heterogeneous/double _Complex
 - type: stempel
   parameter: 3D/r1/box/constant/homogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r1/box/constant/homogeneous/double
   scaling:
@@ -761,10 +665,6 @@
   parameter: 3D/r1/box/constant/homogeneous/double _Complex
 - type: stempel
   parameter: 3D/r1/box/constant/point-symmetric/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r1/box/constant/point-symmetric/double
   scaling:
@@ -809,10 +709,6 @@
   parameter: 3D/r1/box/variable/point-symmetric/double _Complex
 - type: stempel
   parameter: 3D/r2/star/constant/isotropic/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r2/star/constant/isotropic/double
   scaling:
@@ -825,10 +721,6 @@
   parameter: 3D/r2/star/constant/isotropic/double _Complex
 - type: stempel
   parameter: 3D/r2/star/constant/heterogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r2/star/constant/heterogeneous/double
   scaling:
@@ -841,10 +733,6 @@
   parameter: 3D/r2/star/constant/heterogeneous/double _Complex
 - type: stempel
   parameter: 3D/r2/star/constant/homogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r2/star/constant/homogeneous/double
   scaling:
@@ -857,10 +745,6 @@
   parameter: 3D/r2/star/constant/homogeneous/double _Complex
 - type: stempel
   parameter: 3D/r2/star/constant/point-symmetric/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r2/star/constant/point-symmetric/double
   scaling:
@@ -905,10 +789,6 @@
   parameter: 3D/r2/star/variable/point-symmetric/double _Complex
 - type: stempel
   parameter: 3D/r2/box/constant/isotropic/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r2/box/constant/isotropic/double
   scaling:
@@ -921,10 +801,6 @@
   parameter: 3D/r2/box/constant/isotropic/double _Complex
 - type: stempel
   parameter: 3D/r2/box/constant/heterogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r2/box/constant/heterogeneous/double
   scaling:
@@ -937,10 +813,6 @@
   parameter: 3D/r2/box/constant/heterogeneous/double _Complex
 - type: stempel
   parameter: 3D/r2/box/constant/homogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r2/box/constant/homogeneous/double
   scaling:
@@ -953,10 +825,6 @@
   parameter: 3D/r2/box/constant/homogeneous/double _Complex
 - type: stempel
   parameter: 3D/r2/box/constant/point-symmetric/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r2/box/constant/point-symmetric/double
   scaling:
@@ -1001,10 +869,6 @@
   parameter: 3D/r2/box/variable/point-symmetric/double _Complex
 - type: stempel
   parameter: 3D/r3/star/constant/isotropic/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r3/star/constant/isotropic/double
   scaling:
@@ -1017,10 +881,6 @@
   parameter: 3D/r3/star/constant/isotropic/double _Complex
 - type: stempel
   parameter: 3D/r3/star/constant/heterogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r3/star/constant/heterogeneous/double
   scaling:
@@ -1033,10 +893,6 @@
   parameter: 3D/r3/star/constant/heterogeneous/double _Complex
 - type: stempel
   parameter: 3D/r3/star/constant/homogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r3/star/constant/homogeneous/double
   scaling:
@@ -1049,10 +905,6 @@
   parameter: 3D/r3/star/constant/homogeneous/double _Complex
 - type: stempel
   parameter: 3D/r3/star/constant/point-symmetric/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r3/star/constant/point-symmetric/double
   scaling:
@@ -1097,10 +949,6 @@
   parameter: 3D/r3/star/variable/point-symmetric/double _Complex
 - type: stempel
   parameter: 3D/r3/box/constant/isotropic/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r3/box/constant/isotropic/double
   scaling:
@@ -1113,10 +961,6 @@
   parameter: 3D/r3/box/constant/isotropic/double _Complex
 - type: stempel
   parameter: 3D/r3/box/constant/heterogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r3/box/constant/heterogeneous/double
   scaling:
@@ -1129,10 +973,6 @@
   parameter: 3D/r3/box/constant/heterogeneous/double _Complex
 - type: stempel
   parameter: 3D/r3/box/constant/homogeneous/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r3/box/constant/homogeneous/double
   scaling:
@@ -1145,10 +985,6 @@
   parameter: 3D/r3/box/constant/homogeneous/double _Complex
 - type: stempel
   parameter: 3D/r3/box/constant/point-symmetric/float
-  scaling:
-    steps: 25
-    first: 96
-    last: 1300  # ~16GB
 - type: stempel
   parameter: 3D/r3/box/constant/point-symmetric/double
   scaling:
